; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_lavc.c_uninit.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_lavc.c_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.encode_lavc_context*, %struct.priv* }
%struct.encode_lavc_context = type { i32, i64 }
%struct.priv = type { double, %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ao*)* @uninit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uninit(%struct.ao* %0) #0 {
  %2 = alloca %struct.ao*, align 8
  %3 = alloca %struct.priv*, align 8
  %4 = alloca %struct.encode_lavc_context*, align 8
  %5 = alloca double, align 8
  store %struct.ao* %0, %struct.ao** %2, align 8
  %6 = load %struct.ao*, %struct.ao** %2, align 8
  %7 = getelementptr inbounds %struct.ao, %struct.ao* %6, i32 0, i32 1
  %8 = load %struct.priv*, %struct.priv** %7, align 8
  store %struct.priv* %8, %struct.priv** %3, align 8
  %9 = load %struct.ao*, %struct.ao** %2, align 8
  %10 = getelementptr inbounds %struct.ao, %struct.ao* %9, i32 0, i32 0
  %11 = load %struct.encode_lavc_context*, %struct.encode_lavc_context** %10, align 8
  store %struct.encode_lavc_context* %11, %struct.encode_lavc_context** %4, align 8
  %12 = load %struct.priv*, %struct.priv** %3, align 8
  %13 = getelementptr inbounds %struct.priv, %struct.priv* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 8
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %52, label %16

16:                                               ; preds = %1
  %17 = load %struct.priv*, %struct.priv** %3, align 8
  %18 = getelementptr inbounds %struct.priv, %struct.priv* %17, i32 0, i32 0
  %19 = load double, double* %18, align 8
  store double %19, double* %5, align 8
  %20 = load %struct.encode_lavc_context*, %struct.encode_lavc_context** %4, align 8
  %21 = getelementptr inbounds %struct.encode_lavc_context, %struct.encode_lavc_context* %20, i32 0, i32 0
  %22 = call i32 @pthread_mutex_lock(i32* %21)
  %23 = load %struct.priv*, %struct.priv** %3, align 8
  %24 = getelementptr inbounds %struct.priv, %struct.priv* %23, i32 0, i32 1
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %38, label %31

31:                                               ; preds = %16
  %32 = load %struct.encode_lavc_context*, %struct.encode_lavc_context** %4, align 8
  %33 = getelementptr inbounds %struct.encode_lavc_context, %struct.encode_lavc_context* %32, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = sitofp i64 %34 to double
  %36 = load double, double* %5, align 8
  %37 = fadd double %36, %35
  store double %37, double* %5, align 8
  br label %38

38:                                               ; preds = %31, %16
  %39 = load %struct.encode_lavc_context*, %struct.encode_lavc_context** %4, align 8
  %40 = getelementptr inbounds %struct.encode_lavc_context, %struct.encode_lavc_context* %39, i32 0, i32 0
  %41 = call i32 @pthread_mutex_unlock(i32* %40)
  %42 = load %struct.priv*, %struct.priv** %3, align 8
  %43 = getelementptr inbounds %struct.priv, %struct.priv* %42, i32 0, i32 1
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %43, align 8
  %45 = call i64 @encoder_get_offset(%struct.TYPE_4__* %44)
  %46 = sitofp i64 %45 to double
  %47 = load double, double* %5, align 8
  %48 = fadd double %47, %46
  store double %48, double* %5, align 8
  %49 = load %struct.ao*, %struct.ao** %2, align 8
  %50 = load double, double* %5, align 8
  %51 = call i32 @encode(%struct.ao* %49, double %50, i32* null)
  br label %52

52:                                               ; preds = %38, %1
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1

declare dso_local i64 @encoder_get_offset(%struct.TYPE_4__*) #1

declare dso_local i32 @encode(%struct.ao*, double, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
